  * Add upstream Rev. 3005:
    - Update: bin/AST_expired_list_exporter.pl,
        www/vicidial/admin.php,
        www/vicidial/admin_amm_multi.php,
        www/vicidial/admin_header.php,
        www/vicidial/admin_soundboard.php,
        www/vicidial/audio_store.php: Added options to use different date
          ranges for exports and deletes; Modified calls to audio file chooser
          function; 
  * Add upstream Rev. 3006:
    - Update: bin/AST_CRON_audio_3_ftp.pl,
        bin/AST_CRON_audio_3_ftp_FTPSSL.pl: Change some function calls.

2.25.27
  [Jörg Fring-Fürst]
  * Correct typo:
    - www/agc/vicidial.php,
      www/vicidial/admin.php.
  * Release 2.25.27 2018-06-05.

2.25.26
  [Jörg Frings-Fürst]
  * www/vicidial/AST_stat_agent1.php:
    - Add Campaign status.
  * New LICENSE.
  * New license/AGPLv3.
  * New silence files with length 1 - 10 sec..
  * New DB-Schema 1533:
    - New extras/mysql_update/mysql-1533.sql.
    - Changed extras/upgrade_2.14.sql,
      extras/MySQL_AST_CREATE_tables.sql.
  * New function AutoAnswer (2018-007):
    - Changed www/vicidial/admin.php,
      agi/agi-VDAD_ALL_inbound.agi,
      bin/ADMIN_keepalive_ALL.pl,
      bin/AST_update.pl,
      extras/MySQL_AST_CREATE_tables.sql,
      extras/mysql_update/mysql-1533.sql,
      extras/upgrade_2.14.sql,
      www/agc/vicidial.php.
  * bin/ADMIN_backup.pl:
    - Add /etc/flyingpenguin.
  * Change license to AGPLv3:
    - Changed bin/ADMIN_backup.pl,
      www/vicidial/AST_stat_agent1.php,
      agi/agi-record_prompts.agi,
      bin/ADMIN_keepalive_ALL.pl
  * Add upstream Rev. 2939:
    - Changed UPGRADE,
      extras/MySQL_AST_CREATE_tables.sql,
      extras/mysql_update/mysql-1533.sql,
      extras/upgrade_2.14.sql,
      www/agc/vicidial.php,
      www/vicidial/admin.php,
      www/vicidial/help.php: Added script_top_dispo feature.
  * Add upstream Rev. 2940:
    - Changed UPGRADE,
      extras/MySQL_AST_CREATE_tables.sql,
      extras/mysql_update/mysql-1533.sql,