@@ -72,10 +72,16 @@
         www/vicidial/admin_soundboard.php,
         www/vicidial/audio_store.php: Added options to use different date
           ranges for exports and deletes; Modified calls to audio file chooser
-          function; 
+          function;
   * Add upstream Rev. 3006:
     - Update: bin/AST_CRON_audio_3_ftp.pl,
         bin/AST_CRON_audio_3_ftp_FTPSSL.pl: Change some function calls.
+  * Add upstream Rev. 3007:
+    - Change: www/vicidial/AST_CLOSERstats.php,
+        www/vicidial/AST_CLOSERstats_v2.php,
+        www/vicidial/AST_inbound_forecasting.php,
+        www/vicidial/AST_rt_monitor_log_report.php,
+        www/vicidial/Erlang_report.php: Fix for rare allowed reports issue.
 
 2.25.27
   [Jörg Fring-Fürst]
